--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Algebra - Frontend</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,9 +17,7 @@
         <span>R</span>
         <span>A</span>
     </div>
-
     <h1 class="">Frontend developer</h1>
-   
     <div class="languages">
         <button class="button1"><span class="languages__text">HTML</span></button>
         <button class="button1"><span class="languages__text">CSS</span></button>
